--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -349,3 +349,10 @@ h1 {
     height: 1.6em;
     width: fit-content;
 }
+
+#marker {
+    background-image: url("images/img_2.png");
+    background-size: cover;
+    width: 50px;
+    height: 70px;
+}
